# mivia-aid-dataset

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: IMPLEMENTATION_PLAN.md  ML_REVIEW_CONTEXT.md  NEXT_GEN_IMPLEMENTATION_PLAN.md
scripts/: cache_submission_processor.py  export_submission.py  make_folds.py
src/: __init__.py  config.py  eval.py  extract_stage2_features.py  infer_video.py  mine_hard_negatives.py  train_stage1.py  train_stage2.py  train_stage2_cached.py
src/data/: __init__.py  annotations.py  cached_sequence_dataset.py  clip_dataset.py  motion_features.py  sequence_dataset.py  temporal_targets.py  video_decode.py
src/models/: __init__.py  aid_model.py  clip_onset_model.py  motion_fusion.py  temporal_head.py  temporal_only_model.py  videomae_encoder.py
src/utils/: __init__.py  checkpoint.py  metrics.py  postprocess.py  training.py
submission/: test.ipynb  test.py
